# CIRISServer is shipped as a PyO3 abi3 wheel that CIRISAgent (pure Python)
# pip-installs and links instead of composing the cores itself — the single
# `ciris-cohabitation` composition (MISSION.md §1.2/§6). The same crate also
# builds as the `ciris-server` binary (Cargo [[bin]]); see Cargo.toml.
#
# STATUS: Spec. The wheel does not build until the substrate floor resolves
# (CIRISEdge v3.0.0 tag + registry/lens co-bump). See MISSION.md §4.
[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ciris-server"
# Version is DYNAMIC — maturin reads it from Cargo.toml's [package] version, so the
# wheel can never desync from the crate. (It was a static "0.2.2" here through
# 0.2.6, which silently built 0.2.2 wheels on every tag → PyPI "File already
# exists". Never hard-code it again.)
dynamic = ["version"]
description = "The fabric node — the federation's headless cohabitation runtime (registry + lens [+ node] over one shared substrate), as the abi3 wheel CIRISAgent consumes. agent = fabric node + brain."
authors = [{ name = "Eric Moore", email = "eric@ciris.ai" }]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
# abi3-py310 → one wheel covers CPython 3.10+ (matches the substrate crates,
# which ship cp310-abi3). The Win7-SP1-loadable floor rides the Tier-3
# build-std lane (release.yml; CIRISVerify#67 pattern).
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/CIRISAI/CIRISServer"

[project.scripts]
# `pip install ciris-server` → three commands, mirroring how `ciris-agent`
# ships (a desktop-first launcher + a headless server + a UI-only launcher):
#
#   ciris-server            → start the node AND launch the desktop UI (default)
#   ciris-server serve …    → headless node only (Node A/B path; --home/--key-id)
#   ciris-server-headless   → always headless (alias for `serve`)
#   ciris-desktop           → desktop UI only (assumes a node is already serving)
#
# These resolve to the thin Python launcher (`python-source = "python"` below),
# which for any node-directed invocation delegates to the PyO3 `main` exported
# from src/lib.rs (now reachable as `ciris_server._native.main`). The headless
# contract is unchanged: `ciris-server serve --home X --key-id Y` boots a node.
ciris-server = "ciris_server.cli:main"
ciris-server-headless = "ciris_server.cli:server"
ciris-desktop = "ciris_server.cli:desktop"

[tool.maturin]
# Build the abi3 wheel with the extension-module feature (the binary builds
# WITHOUT it, so a plain `cargo build` never links libpython — Cargo.toml).
features = ["extension-module"]
# MIXED Rust+Python layout. The compiled abi3 extension is built as the IN-
# PACKAGE submodule `ciris_server._native` (not the bare top-level module it was
# through 0.5.x). `python/ciris_server/__init__.py` then `from ._native import *`,
# so every historical import keeps resolving — `from ciris_server import Engine,
# NotFound, LensClient` and `import ciris_server; ciris_server.main()` are
# unchanged for the agent/CIRISStatus consumers. This layout is what lets the
# wheel also ship the desktop launcher (cli.py / desktop_launcher.py) and the
# per-platform JAR alongside the .so.
module-name = "ciris_server._native"
# The hand-written Python package (launcher + __init__ re-export) lives here.
# maturin copies this tree into the wheel and drops the compiled `_native.<abi3>`
# into the matching `ciris_server/` package dir.
python-source = "python"
# Keep the Python sdist under PyPI's 100 MB/file limit: drop the vendored
# KMP/Compose client (~234 MB) + the other non-Rust-build trees from the sdist.
# None are needed to build the abi3 extension — the wheel carries the compiled
# artifact, the sdist carries buildable Rust source. (Wheels never bundled these.)
exclude = [
    { path = "client/**/*", format = "sdist" },
    { path = "qa/**/*", format = "sdist" },
    { path = "app/**/*", format = "sdist" },
    { path = "FSD/**/*", format = "sdist" },
    # The desktop_app/.gitignore is a repo-hygiene marker (keeps the JAR out of
    # git, keeps the dir tracked). It is not runtime data — keep it out of both
    # artifacts.
    { path = "python/ciris_server/desktop_app/.gitignore" },
]
# Bundle the per-platform desktop JAR INTO THE WHEEL ONLY. CI stages exactly one
# `CIRIS-<platform>-<ver>.jar` (gradle :desktopApp:packageUberJarForCurrentOS)
# under python/ciris_server/desktop_app/ right before `maturin build`, so each
# platform wheel carries only its own JAR (tens of MB; system Java, no JRE →
# comfortably under PyPI's 100 MB cap). Never bundled into the sdist (the JAR is
# a build output, and the sdist already excludes the client source it builds
# from). The .jar is git-ignored; the empty desktop_app/ dir is tracked so the
# package layout exists even on a headless/source build with no JAR staged.
include = [{ path = "python/ciris_server/desktop_app/CIRIS-*.jar", format = "wheel" }]
